<resources>
    <string name="app_name">TitShop</string>
    <string name="logo">fancy</string>
    <string name="login">Login</string>
    <string name="send">Send</string>
    <string name="search">Search</string>
    <string name="email">Email</string>
    <string name="pass">Password</string>
    <string name="forgot">Forgot ?</string>
    <string name="Orlogin">Or sign up with social account</string>
    <string name="loginintoaccount">Log into \nyour account</string>
    <string name="forgotpass">Forgot Password ?</string>
    <string name="reveiw">Review now </string>
    <string name="xxx">xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx</string>
    <string name="describe">Best fashion Shopping app</string>
    <string name="loginEmail">Sign Up with Email</string>
    <string name="loginFacebook">Continue with Facebook</string>
    <string name="swipe">Swipe to brower</string>
    <string name="discover">Discover products easily by swipe from one catetogy to another</string>
    <string name="startShopping">Start Shopping</string>
    <string name="alreadyacount">Already have account ?</string>
    <string name="createAcount">Create \nyour account</string>
    <string name="policy">I accept the terms of use, copyright and privacy policy</string>
    <string name="help">If you need help resetting your password We can send you a link to to that</string>
    <string name="yourname">Your name</string>
    <string name="itemfound">7743 items found</string>
    <string name="womanTop">Women \'s Tops</string>
    <string name="wishlist">Wish List</string>
    <string name="shipping">Shipping</string>
    <string name="explore">Explore</string>
    <string name="womensuit">Women\'s Suit</string>
    <string name="upto">up to 70% off</string>
    <string name="upto50">up to 50% off</string>
    <string name="move">move to bag</string>
    <string name="address">My address</string>
    <string name="address2">Address</string>
    <string name="total">Total :</string>
    <string name="totalMonney">99$</string>
    <string name="shippingmethod">Shipping method</string>
    <string name="zipcode">Zip code</string>
    <string name="Account">Account</string>
    <string name="Notification">Notification</string>
    <string name="noaccount">You dont\'t have account</string>
    <string name="Signup">Sign up</string>
    <string name="password">Password</string>
    <string name="language">Language</string>
    <string name="confirm">Confirm</string>
    <string name="fullname">Full Name</string>
    <string name="phonenumber">Phonenumber</string>
    <string name="username">Miranda West</string>
    <string name="sentenlike">Work hard in liscense. Let your success be the noise</string>
    <string name="signupfacebook">Sign Up with Facebook</string>
    <string name="signup">Sign Up</string>
    <string name="rateing">250 ratings</string>
    <string name="nameproductSample">Eva Suit Jacket</string>
    <string name="samplePrice">$208.99</string>
    <string name="showall">Show all</string>
    <string name="collection">Designer Collection</string>
    <string name="toptrend">Top Trends</string>
    <string-array name="payMehthod">
        <item>Online payment</item>
        <item>Pay at home</item>
    </string-array>
    <string-array name="zipcode">
        <item>1000</item>
        <item>1001</item>
        <item>1002</item>
        <item>1003</item>
        <item>1004</item>
    </string-array>
</resources>
