<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/tools">
    <data>
        <variable
            name="viewmodel"
            type="com.example.titshop.ui.register.RegisterViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:background="@drawable/bg_register"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineHonirataal"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineVertical"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <LinearLayout
            app:layout_constraintBottom_toBottomOf="parent"
            android:gravity="center"
            android:layout_marginBottom="@dimen/margin_15dp_"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tvAlreadyAcount"
                android:text="@string/alreadyacount"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:textSize="@dimen/textview_content"
                android:textColor="@color/colorWhite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/tvLogin"
                android:text="@string/login"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@id/tvAlreadyAcount"
                android:textSize="@dimen/textview_content"
                android:layout_marginLeft="@dimen/margin_5dp_"
                android:textColor="@color/colorBlue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <EditText
            android:id="@+id/edtEmail"
            android:hint="@string/email"
            android:backgroundTint="@color/colorWhite"
            android:textSize="@dimen/textview_content"
            android:padding="@dimen/margin_15dp_"
            android:singleLine="true"
            android:textColor="@color/colorWhite"
            android:layout_marginLeft="@dimen/margin_20dp_"
            android:layout_marginRight="@dimen/margin_20dp_"
            android:textColorHint="@color/colorWhite"
            app:layout_constraintBottom_toTopOf="@id/guidelineHonirataal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/edtYourname"
            android:hint="@string/yourname"
            android:textSize="@dimen/textview_content"
            android:padding="@dimen/margin_15dp_"
            android:singleLine="true"
            android:textColor="@color/colorWhite"
            android:layout_marginLeft="@dimen/margin_20dp_"
            android:layout_marginRight="@dimen/margin_20dp_"
            android:backgroundTint="@color/colorWhite"
            android:textColorHint="@color/colorWhite"
            android:layout_marginBottom="@dimen/margin_10dp_"
            app:layout_constraintBottom_toTopOf="@id/edtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/edtPassWord"
            android:hint="@string/pass"
            android:backgroundTint="@color/colorWhite"
            android:textSize="@dimen/textview_content"
            android:padding="@dimen/margin_15dp_"
            android:singleLine="true"
            android:inputType="textPassword"
            android:layout_marginLeft="@dimen/margin_20dp_"
            android:textColor="@color/colorWhite"
            android:layout_marginRight="@dimen/margin_20dp_"
            android:textColorHint="@color/colorWhite"
            android:layout_marginTop="@dimen/margin_10dp_"
            app:layout_constraintTop_toBottomOf="@id/edtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <CheckBox
            android:id="@+id/checkboxPolicy"
            android:text="@string/policy"
            android:textColor="@color/colorWhite"
            android:layout_marginTop="@dimen/margin_15dp_"
            android:gravity="center_vertical"
            android:layout_marginLeft="@dimen/margin_20dp_"
            android:layout_marginRight="@dimen/margin_20dp_"
            app:layout_constraintTop_toBottomOf="@id/edtPassWord"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/tvCreate"
            android:text="@string/createAcount"
            android:textSize="@dimen/textview_tittle"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/ibBack"
            android:layout_marginLeft="@dimen/margin_20dp_"
            android:layout_marginRight="@dimen/margin_20dp_"
            android:textColor="@color/colorWhite"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginBottom="@dimen/margin_20dp_"
            app:layout_constraintBottom_toTopOf="@id/edtYourname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signup"
            android:textColor="@color/colorWhite"
            android:layout_marginLeft="@dimen/margin_20dp_"
            android:layout_marginRight="@dimen/margin_20dp_"
            android:background="@drawable/custom_btn_login"
            android:layout_marginTop="@dimen/margin_10dp_"
            app:layout_constraintTop_toBottomOf="@id/checkboxPolicy"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>
        <ImageButton
            android:id="@+id/ibBack"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginLeft="@dimen/margin_15dp_"
            android:layout_marginTop="@dimen/margin_15dp_"
            android:tint="@color/colorWhite"
            android:src="@drawable/ic_chevron_left_black_24dp"
            android:layout_width="wrap_content"
            android:background="@null"
            android:layout_height="wrap_content"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>