<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:bind="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="viewmodel"
            type="com.example.titshop.ui.introduce.IntroduceViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:background="@color/colorWhite"
        android:padding="@dimen/margin_25dp_"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/tv_swipe"
            bind:layout_constraintTop_toTopOf="parent"
            android:text="@string/swipe"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/margin_15dp_"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/textview_tittle"
            bind:layout_constraintLeft_toLeftOf="parent"
            bind:layout_constraintRight_toRightOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/tv_discover"
            bind:layout_constraintTop_toBottomOf="@id/tv_swipe"
            android:text="@string/discover"
            android:textColor="@color/colorBlack"
            android:gravity="center"
            android:maxWidth="250dp"
            android:layout_marginTop="@dimen/margin_15dp_"
            android:textSize="@dimen/textview_small"
            bind:layout_constraintLeft_toLeftOf="parent"
            bind:layout_constraintRight_toRightOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <recycler.coverflow.RecyclerCoverFlow
            android:id="@+id/rvIntroduce"
            bind:layout_constraintTop_toBottomOf="@id/tv_discover"
            bind:layout_constraintLeft_toLeftOf="parent"
            bind:layout_constraintRight_toRightOf="parent"
            android:layout_marginLeft="@dimen/margin_20dp_"
            android:layout_marginRight="@dimen/margin_20dp_"
            android:layout_marginTop="@dimen/margin_10dp_"
            android:layout_marginBottom="@dimen/margin_15dp_"
            bind:layout_constraintBottom_toTopOf="@id/btn_shopping"
            android:layout_width="match_parent"
            android:layout_height="0dp">
        </recycler.coverflow.RecyclerCoverFlow>
        <Button
            android:id="@+id/btn_shopping"
            android:text="@string/startShopping"
            android:textColor="@color/colorWhite"
            android:layout_marginBottom="@dimen/margin_15dp_"
            android:paddingTop="@dimen/margin_10dp_"
            android:paddingBottom="@dimen/margin_10dp_"
            android:textSize="@dimen/textview_content"
            android:background="@drawable/custom_bg_login_fb"
            android:layout_marginLeft="@dimen/margin_20dp_"
            android:layout_marginRight="@dimen/margin_20dp_"
            bind:layout_constraintBottom_toTopOf="@id/llHaveAcount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <LinearLayout
            android:id="@+id/llHaveAcount"
            android:orientation="horizontal"
            android:gravity="center"
            bind:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="@dimen/margin_15dp_"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tvAlreadyAcount"
                android:text="@string/alreadyacount"
                android:textSize="@dimen/textview_content"
                android:textColor="@color/colorGrey"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"/>
            <TextView
                android:id="@+id/tvLogin"
                android:text="@string/login"
                android:textSize="@dimen/textview_content"
                android:layout_marginLeft="@dimen/margin_5dp_"
                android:textColor="@color/colorBlack"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"/>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
