<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="viewmodel"
            type="com.example.titshop.ui.MainViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.MainActivity">

        <ImageView
            android:id="@+id/ivTest"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@mipmap/bg"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:id="@+id/tvLogo"
            android:textAllCaps="true"
            android:textColor="@color/colorWhite"
            android:text="@string/logo"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            android:textSize="@dimen/textview_tittle_big"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            app:layout_constraintTop_toBottomOf="@id/tvLogo"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:id="@+id/tvDescribe"
            android:textColor="@color/colorWhite"
            android:text="@string/describe"
            android:textSize="@dimen/textview_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:id="@+id/tvLogin"
            android:textColor="@color/colorBlack"
            android:textStyle="bold"
            android:text="@string/login"
            android:layout_marginTop="@dimen/margin_10dp_"
            android:layout_marginRight="@dimen/margin_10dp_"
            android:textSize="@dimen/textview_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <LinearLayout
            android:id="@+id/llLoginEmail"
            android:background="@drawable/custom_bg_login_email"
            android:layout_marginLeft="@dimen/margin_20dp_"
            android:layout_marginRight="@dimen/margin_20dp_"
            android:gravity="center"
            android:layout_marginBottom="@dimen/margin_20dp_"
            android:paddingTop="13dp"
            android:paddingBottom="13dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:src="@drawable/mail"
                android:tint="@color/colorBlack"
                android:layout_width="@dimen/margin_20dp_"
                android:layout_height="@dimen/margin_20dp_"/>
            <TextView
                android:text="@string/loginEmail"
                android:textColor="@color/colorBlack"
                android:layout_marginLeft="@dimen/margin_15dp_"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>