<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="viewmodel"
            type="com.example.titshop.ui.forgotpass.ForgotViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:background="@color/colorWhite"
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineHoniratal"
            app:layout_constraintGuide_percent="0.5"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/tvHelp"
            android:textSize="@dimen/textview_content"
            android:text="@string/help"
            android:layout_marginBottom="@dimen/margin_15dp_"
            android:layout_marginLeft="@dimen/margin_20dp_"
            android:layout_marginRight="@dimen/margin_20dp_"
            app:layout_constraintBottom_toTopOf="@id/llEmail"
            android:textColor="@color/colorGrey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/txt_account"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/forgotpass"
            android:textStyle="bold"
            android:layout_marginLeft="@dimen/margin_20dp_"
            android:layout_marginRight="@dimen/margin_20dp_"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/textview_tittle"
            android:gravity="left"
            android:layout_marginBottom="@dimen/margin_20dp_"
            app:layout_constraintBottom_toTopOf="@id/tvHelp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>
            <LinearLayout
                android:id="@+id/llEmail"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginLeft="@dimen/margin_20dp_"
                android:layout_marginRight="@dimen/margin_20dp_"
                app:layout_constraintBottom_toTopOf="@id/guidelineHoniratal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:src="@drawable/ic_email_black_24dp"
                    android:layout_width="@dimen/margin_30dp_"
                    android:layout_height="@dimen/margin_30dp_"/>
                <EditText
                    android:id="@+id/edtEmail"
                    android:textSize="@dimen/textview_content"
                    android:hint="@string/email"
                    android:background="@null"
                    android:inputType="text"
                    android:singleLine="true"
                    android:padding="@dimen/margin_10dp_"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        <View
            android:id="@+id/view"
            android:layout_marginLeft="@dimen/margin_20dp_"
            android:layout_marginRight="@dimen/margin_20dp_"
            android:layout_marginTop="@dimen/margin_10dp_"
            app:layout_constraintTop_toBottomOf="@id/llEmail"
            android:background="@color/colorGrey"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>
        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/send"
            android:elevation="@dimen/margin_10dp_"
            android:textColor="@color/colorWhite"
            android:layout_marginLeft="@dimen/margin_20dp_"
            android:layout_marginRight="@dimen/margin_20dp_"
            android:background="@drawable/custom_btn_login"
            android:layout_marginTop="@dimen/margin_20dp_"
            app:layout_constraintTop_toBottomOf="@+id/view"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>