<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="viewmodel"
            type="com.example.titshop.fragment.explore.ExploreViewModel" />
    </data>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:background="@color/colorWhite"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:paddingLeft="@dimen/margin_15dp_"
            android:paddingRight="@dimen/margin_15dp_"
            android:layout_height="match_parent"
            android:background="@color/colorWhite">
            <TextView
                android:id="@+id/tvExplore"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/explore"
                android:layout_marginTop="@dimen/margin_10dp_"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/textview_tittle"
                android:textStyle="bold" />
            <RelativeLayout
                android:id="@+id/rlSearch"
                android:background="@drawable/bg_search"
                android:padding="@dimen/margin_5dp_"
                android:layout_marginTop="@dimen/margin_15dp_"
                app:layout_constraintTop_toBottomOf="@id/tvExplore"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageButton
                    android:id="@+id/ibVoice"
                    android:background="@null"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:src="@drawable/ic_keyboard_voice_black_24dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <EditText
                    android:id="@+id/edtSearch"
                    android:background="@null"
                    android:hint="@string/search"
                    android:layout_centerVertical="true"
                    android:padding="@dimen/margin_5dp_"
                    android:textSize="@dimen/textview_content"
                    android:layout_toRightOf="@id/ivSearch"
                    android:layout_toLeftOf="@id/ibVoice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <ImageView
                    android:id="@+id/ivSearch"
                    android:background="@null"
                    android:layout_centerVertical="true"
                    android:layout_alignParentLeft="true"
                    android:src="@drawable/ic_search_black_24dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </RelativeLayout>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvSearch"
                android:layout_marginTop="@dimen/margin_10dp_"
                app:layout_constraintTop_toBottomOf="@id/rlSearch"
                android:nestedScrollingEnabled="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <LinearLayout
                android:id="@+id/llDesignWomen"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@id/rlSearch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <androidx.cardview.widget.CardView
                    android:id="@+id/cardviewDesgin"
                    android:layout_marginTop="@dimen/margin_10dp_"
                    app:layout_constraintTop_toBottomOf="@id/rlSearch"
                    android:layout_width="match_parent"
                    app:cardElevation="@dimen/margin_5dp_"
                    app:cardUseCompatPadding="true"
                    app:cardCornerRadius="@dimen/margin_10dp_"
                    android:layout_height="@dimen/heightSlide">
                    <RelativeLayout
                        android:id="@+id/rlDesign"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/heightSlide">
                        <ImageView
                            android:id="@+id/ivCollection"
                            android:src="@mipmap/bg"
                            android:scaleType="centerCrop"
                            android:layout_centerInParent="true"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"/>
                        <TextView
                            android:id="@+id/tvdesgin"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:layout_marginTop="@dimen/margin_20dp_"
                            android:text="@string/collection"
                            android:textColor="@color/colorWhite"
                            android:textSize="@dimen/textview_tittle"
                            />
                        <TextView
                            android:id="@+id/tvUpto50"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_below="@id/tvdesgin"
                            android:layout_gravity="center|center_horizontal"
                            android:layout_marginTop="@dimen/margin_10dp_"
                            android:text="@string/upto"
                            android:textColor="@color/colorWhite2"
                            android:textSize="@dimen/textview_small"
                            />
                    </RelativeLayout>
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    app:layout_constraintTop_toBottomOf="@id/cardviewDesgin"
                    android:layout_width="match_parent"
                    app:cardElevation="@dimen/margin_5dp_"
                    app:cardUseCompatPadding="true"
                    app:cardCornerRadius="@dimen/margin_10dp_"
                    android:layout_height="@dimen/heightSlide">
                    <RelativeLayout
                        android:id="@+id/rlWomen"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/heightSlide">
                        <ImageView
                            android:id="@+id/ivWomen"
                            android:src="@mipmap/bg"
                            android:scaleType="centerCrop"
                            android:layout_centerInParent="true"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"/>
                        <TextView
                            android:id="@+id/tvWomen"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:layout_marginTop="@dimen/margin_20dp_"
                            android:text="@string/womensuit"
                            android:textColor="@color/colorWhite"
                            android:textSize="@dimen/textview_tittle"
                            />
                        <TextView
                            android:id="@+id/tvUpto"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_below="@id/tvWomen"
                            android:layout_gravity="center|center_horizontal"
                            android:layout_marginTop="@dimen/margin_10dp_"
                            android:text="@string/upto50"
                            android:textColor="@color/colorWhite2"
                            android:textSize="@dimen/textview_small"
                            />
                    </RelativeLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>
